// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component it renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center"
  >
    <span
      class="mx-1"
    >
      SVG Icon
    </span>
  </div>
</DocumentFragment>
`;

exports[`Icon component it renders icon only 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center"
  >
    <div
      class="w-6 h-6 stroke-current fill-current"
    >
      <svg
        classname="w-6 h-6"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        
  
        <path
          d="M12 14l9-5-9-5-9 5 9 5z"
        />
        
  
        <path
          d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
        />
        

        <path
          d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
          strokelinecap="round"
          strokelinejoin="round"
          strokewidth="{2}"
        />
        

      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Icon component it renders left icon 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center"
  >
    <div
      class="w-6 h-6 stroke-current fill-current"
    >
      <svg
        classname="w-6 h-6"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        
  
        <path
          d="M12 14l9-5-9-5-9 5 9 5z"
        />
        
  
        <path
          d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
        />
        

        <path
          d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
          strokelinecap="round"
          strokelinejoin="round"
          strokewidth="{2}"
        />
        

      </svg>
    </div>
    <span
      class="mx-1"
    >
      SVG Icon
    </span>
  </div>
</DocumentFragment>
`;

exports[`Icon component it renders no icon 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center"
  >
    <span
      class="mx-1"
    >
      SVG Icon
    </span>
  </div>
</DocumentFragment>
`;

exports[`Icon component it renders right icon 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center"
  >
    <span
      class="mx-1"
    >
      SVG Icon
    </span>
    <div
      class="w-6 h-6 stroke-current fill-current"
    >
      <svg
        classname="w-6 h-6"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        
  
        <path
          d="M12 14l9-5-9-5-9 5 9 5z"
        />
        
  
        <path
          d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
        />
        

        <path
          d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
          strokelinecap="round"
          strokelinejoin="round"
          strokewidth="{2}"
        />
        

      </svg>
    </div>
  </div>
</DocumentFragment>
`;
